# app/controllers/api/v2/measurements_controller.rb
@@ -5,7 +5,9 @@ module Api
       PER_PAGE = 20
 
       def index
-        result = resource_scope.unprocessed.page(params[:page]).per(PER_PAGE)
+        q = resource_scope.ransack(params[:q])
+        q.sorts = 'created_at desc' if q.sorts.empty?
+        result = q.result.page(params[:page]).per(params[:per_page] || PER_PAGE)
         data = result.as_json(methods: :data_parsed)
         meta = {
           limit_value: result.limit_value,
@@ -17,24 +19,52 @@ module Api
       end
 
       def show
-        respond_with(resource_scope.find(params[:id]).as_json(methods: :data_parsed))
+        measurement = resource_scope.find(params[:id])
+        authorize measurement
+
+        respond_with(measurement.as_json(methods: :data_parsed))
       end
 
       def update
         measurement = resource_scope.find(params[:id])
-        measurement.update(update_params)
+        authorize measurement
+
+        measurement.update(client_update_params)
+        respond_with(measurement)
+      end
+
+      def review
+        measurement = resource_scope.find(params[:id])
+        authorize measurement
+
+        measurement.update(admin_update_params)
+        respond_with(measurement)
+      end
+
+      def create
+        measurement = @current_api_user.measurements.new(create_params)
+        authorize measurement
+
+        measurement.save
+        measurement.update_column(:c19_host, true) if c19_host?
         respond_with(measurement)
       end
 
       private
 
       def resource_scope
-        scope = Measurement.api_measurements(@current_api_user).oldest
-        scope = scope.c19_host if c19_host?
-        scope
+        policy_scope(Measurement)
       end
 
-      def update_params
+      def create_params
+        params.require(:measurement).permit(:data_file, :code)
+      end
+
+      def client_update_params
+        params.require(:measurement).permit(:data_window_start, :data_window_end)
+      end
+
+      def admin_update_params
         params.require(:measurement).permit(:processed, :c19_probability, :spi_score, :asdi_score)
       end
     end
